Swagger documentation for all apis done
